--- a/src/Styles/start.less
+++ b/src/Styles/start.less
@@ -15,7 +15,7 @@
 
   .hero-section {
     margin: auto;
-    padding: 10rem 0 10rem 0;
+    padding: 10rem 2rem;
     max-width: 30rem;
 
     h1,
@@ -30,7 +30,7 @@
     .about-section {
       max-width: 700px;
       margin: auto;
-      padding: 5rem 0 5rem 0;
+      padding: 5rem 2rem;
     }
 
     h2, h3 {
@@ -42,7 +42,7 @@
     .apps-section {
       max-width: 900px;
       margin: auto;
-      padding: 5rem 0 5rem 0;
+      padding: 5rem 2rem;
     }
 
     .app-section-card-body {}
