--- a/src/Styles/variables.less
+++ b/src/Styles/variables.less
@@ -18,3 +18,7 @@
 
 @shadow-large: 0 8px 20px #46454C30;
 @shadow-small: 0 4px 10px #46454C30;
+
+/* Responsive */
+
+@mobile-display-width: 576px;
